# StemSep

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Copy of Instrumental, vocal & other stems separation & mix_master guide - UVR_MDX_Demucs_GSEP & others.docx  GEMINI.md  LICENSE-CHOOSE.md  README.md  SECURITY.md  check_architectures.py  check_cuda.py  diagnose_hyperace.py  gcp-oauth.keys.example.json  package-lock.json  package.json  pytest.ini  spreadsheet_data.txt  stemsep_cli.py  test_ensemble.py  test_output_length_validation.py  test_phase_fix.py  tools.yaml  validate_model_registry.py
StemSepApp/: .gitignore  CHANGELOG.md  LICENSE  MANUAL.md  QUICKSTART.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
StemSepApp/assets/: catalog.runtime.bootstrap.json  catalog.runtime.json  mdx_model_data.json  model_info.md  model_presets.json  models.json.bak  presets.json  recipes.json
StemSepApp/assets/registry/: README.md  audio_quality_report.schema.json  catalog.v3.source.json  extra_models.json  guide_digest.json  guide_model_overrides.json  mirror.github_releases.json  model_id_aliases.json  models.v2.schema.json  models.v2.source.bak.json  models.v2.source.json  report_catalog_v3_sources.json  report_model_aliases.json  report_model_coverage.json
StemSepApp/assets/registry/catalog-fragments/: README.md
StemSepApp/docs/: MODELS.md  TROUBLESHOOTING.md  model_settings_research.md
StemSepApp/scripts/: batch_smoke_test_local_models.py  diagnostics.py  smoke_test_local_model.py  update_model_settings.py
StemSepApp/src/: __init__.py  main.py
StemSepApp/src/audio/: ensemble_blender.py  pitch_preprocessor.py  player.py  separation_engine.py  simple_separator.py  zfturbo_wrapper.py
StemSepApp/src/core/: fonts.py  gpu_detector.py  separation_manager.py  system_diagnostics.py  user_presets_manager.py
StemSepApp/src/stemsep/: __init__.py  __main__.py  main.py
StemSepApp/src/ui/: main_window.py  models_page.py  settings_dialog.py
StemSepApp/tests/: README.md  conftest.py  test_architecture_wiring.py  test_audio_sanity_check.py  test_failfast_missing_models.py  test_guide_sync_knowledge.py  test_inference_pipeline_priority.py  test_model_constructor_contract.py  test_output_length_validation.py  test_overlap_semantics.py  test_pipeline_output_mapping.py  test_startup_temp_cleanup.py  test_stem_key_canonicalization.py  test_yaml_direct_load_normalization.py  verify_deep_logic.py  verify_phase_flow.py  verify_recipe_wiring.py  verify_utf8_separation.py
docs/: README.md  (+2 more)
stemsep-backend/: Cargo.toml
stemsep-backend/src/: main.rs
stemsep-backend/tests/: protocol.rs
stemsep-backend/tests/fixtures/: fake_inference.py
(+327 files in other folders)
