[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stemsep"
version = "3.0.0"
description = "Audio stem separation application using state-of-the-art AI models"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "torch",
    "librosa",
    "soundfile",
    "numpy",
    "pydub",
]

[project.optional-dependencies]
dev = [
    # Runner
    "pytest>=8.0.0",

    # Common imports used by tests/vendor paths
    "PyYAML",
    "requests",
    "tqdm",

    # ONNX imports (vendored audio-separator path)
    "onnxruntime",

    # Some architecture/vendor code paths import torchaudio
    "torchaudio",
]

[tool.setuptools]
# Explicit src-layout: all importable packages live under ./src
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
# Only expose the `stemsep` namespace (and its subpackages) as installable packages.
where = ["src"]
include = [
    "stemsep",
    "stemsep.*",
]
exclude = [
    "tests",
    "tests.*",
    # Explicitly exclude any legacy top-level names if they ever reappear under src/
    "audio",
    "audio.*",
    "core",
    "core.*",
    "models",
    "models.*",
    "ui",
    "ui.*",
]

[tool.pylance]
include = ["src", "tests"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
pythonVersion = "3.9"
typeCheckingMode = "basic"
