[package]
name = "stemsep-backend"
version = "0.1.0"
edition = "2021"

[features]
default = []
tract = ["dep:tract-onnx"]

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hound = "3"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sysinfo = "0.30"
tract-onnx = { version = "0.21", optional = true }
